# Knowledge-base-RAG

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
api/: .dockerignore  Dockerfile
backend/: .dockerignore  Dockerfile  app.py  auth.py  db.py  openapi.json  openapi.yaml  pyproject.toml  settings.py
backend/api/: common.py
backend/api/dialogue/: controller.py  models.py  router.py
backend/api/message/: code_parser.py  controller.py  models.py  router.py
backend/api/source/: controller.py  models.py  router.py
backend/api/user/: controller.py  models.py  router.py
backend/tests/: conftest.py
backend/tests/api/: test_dialogue.py  test_message.py  test_source.py  test_user.py
code-executor/: Dockerfile  app.py  pyproject.toml
code-executor/tests/: __init__.py  conftest.py  test_executor.py
data/dataset/cpu/: torch.cpu.stream.md
frontend/: .dockerignore  .prettierignore  .prettierrc  CLAUDE.md  Dockerfile  FOLDER_SYSTEM.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/execute-python/: route.ts
frontend/app/documents/: page.tsx
frontend/app/login/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: chat-main.tsx  chat-sidebar.tsx  code-block.tsx  empty-state.tsx  error-boundary.tsx  paragraph-renderer.tsx  providers.tsx  source-detail-modal.tsx  sources-panel.tsx  theme-toggle.tsx  tooltip-button.tsx
frontend/components/chat/: assistant-message-bubble.tsx  chat-empty-state.tsx  chat-header.tsx  folder-selector.tsx  index.ts  message-group.tsx  message-input.tsx  message-list.tsx  source-badge.tsx  user-message-bubble.tsx
frontend/components/documents/: document-row.tsx  document-stats.tsx  folder-breadcrumb.tsx  folder-row.tsx  folder-tree.tsx  index.ts  upload-area.tsx
frontend/components/ui/: sidebar.tsx  use-toast.ts
frontend/hooks/: index.ts  useApiError.ts  useCopyFeedback.ts  useDateFormat.ts  useDocuments.ts  useGroupedConversations.ts  useMessageGroups.ts  useSearch.ts
frontend/lib/: code-executor.ts  constants.ts  logger.ts  mock-data.ts  syntax-highlighting.ts  types.ts  webgpu-executor.ts
frontend/lib/api/: client.ts  index.ts
frontend/lib/api/mutations/: conversations.ts  documents.ts  index.ts
frontend/lib/api/queries/: conversations.ts  documents.ts  index.ts
frontend/lib/constants/: features.ts  index.ts  security.ts  ui.ts
frontend/lib/security/: index.ts  validators.ts
frontend/lib/store/: chat-store.ts  folder-store.ts
frontend/types/: api.ts  components.ts  index.ts  messages.ts
notebooks/: BaseLine.ipynb
tgbot/: Dockerfile
